# Ignis

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  vcpkg.json
Assets/Cubemaps/cobblestone_street_night_4k_hdr/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
Assets/Cubemaps/cobblestone_street_night_8k_hdr/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
Assets/Cubemaps/rooftop_night_4k_hdr/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
Assets/Files/: Hello.txt
Assets/Shaders/: Compute.slang  Triangle.slang  Triangle2.slang
Assets/Shaders/Ignis/: BlinnPhong.slang  GenerateBRDFLUTMap.slang  GenerateIrradianceMap.slang  GeneratePrefilterMap.slang  GenerateSkyboxMap.slang  (+2 more)
Assets/Textures/: empty_play_room_4k.hdr  resting_place_2k.hdr  resting_place_4k.hdr  small_empty_room_3_4k.hdr
Modules/Editor/: CMakeLists.txt
Modules/Editor/Include/: Editor.hpp
Modules/Editor/Include/Ignis/: BlinnPhong.hpp  Editor.hpp  ImGuiSystem.hpp
Modules/Editor/Include/Ignis/Editor/: ImGuiLayer.hpp  Layer.hpp
Modules/Editor/Source/: BlinnPhong.cpp  Editor.cpp  ImGuiSystem.cpp  Main.cpp  Panels.cpp
Modules/Editor/Source/Editor/: ImGuiLayer.cpp  Layer.cpp
Modules/Engine/: CMakeLists.txt
Modules/Engine/Include/Ignis/: Assets.hpp  Camera.hpp  Core.hpp  ECS.hpp  Engine.hpp  Frame.hpp  Render.hpp  RenderModule.hpp  Vulkan.hpp  Window.hpp
Modules/Engine/Include/Ignis/Assets/: AssimpAsset.hpp  FileAsset.hpp  TextureAsset.hpp
Modules/Engine/Include/Ignis/Core/: AssimpToGlm.hpp  Defines.hpp  EventDispatcher.hpp  Logger.hpp  PCH.hpp  Singleton.hpp  SparseVector.hpp  Timer.hpp
Modules/Engine/Include/Ignis/ECS/: Component.hpp  Entity.hpp
Modules/Engine/Include/Ignis/Engine/: Event.hpp  GUISystem.hpp  GUISystemImpl.hpp  IGUISystem.hpp  IUISystem.hpp  Layer.hpp  LayerImpl.hpp  RenderLayer.hpp  RenderModule.hpp  VulkanLayer.hpp  WindowLayer.hpp
Modules/Engine/Include/Ignis/Engine/RenderLayer/: FrameGraph.hpp
Modules/Engine/Include/Ignis/Engine/VulkanLayer/: Buffer.hpp  Command.hpp  Descriptor.hpp  Image.hpp  Memory.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  Sampler.hpp  Shader.hpp  Synchronization.hpp  Types.hpp
Modules/Engine/Include/Ignis/Engine/WindowLayer/: Events.hpp
Modules/Engine/Include/Ignis/Frame/: Graph.hpp
Modules/Engine/Include/Ignis/GPUScenes/: BlinnPhong.hpp
Modules/Engine/Include/Ignis/Render/: FrameGraph.hpp  GPUScene.hpp  RenderPipeline.hpp
Modules/Engine/Include/Ignis/RenderModule/: BPR.hpp  PBR.hpp
Modules/Engine/Include/Ignis/Vulkan/: Buffer.hpp  Command.hpp  Context.hpp  Descriptor.hpp  Image.hpp  Memory.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  Sampler.hpp  Shader.hpp  Synchronization.hpp  Types.hpp
Modules/Engine/Include/Ignis/Window/: Enums.hpp  Events.hpp
Modules/Engine/Shaders/: Ignis.slang
Modules/Engine/Source/: Camera.cpp  Engine.cpp  Frame.cpp  Render.cpp  Vulkan.cpp  Window.cpp
Modules/Engine/Source/Assets/: AssimpAsset.cpp  FileAsset.cpp  TextureAsset.cpp
Modules/Engine/Source/Core/: AssimpToGlm.cpp  Logger.cpp  Singleton.cpp  Timer.cpp
Modules/Engine/Source/ECS/: Entity.cpp
Modules/Engine/Source/Engine/: Layer.cpp  RenderLayer.cpp  VulkanLayer.cpp  WindowLayer.cpp
Modules/Engine/Source/Engine/RenderLayer/: FrameGraph.cpp
Modules/Engine/Source/Engine/VulkanLayer/: Buffer.cpp  Command.cpp  Descriptor.cpp  Image.cpp  Memory.cpp  Pipeline.cpp  Queue.cpp  RenderPass.cpp  Sampler.cpp  Shader.cpp  Synchronization.cpp
Modules/Engine/Source/Engine/WindowLayer/: Enums.cpp  Events.cpp
Modules/Engine/Source/Frame/: Graph.cpp
Modules/Engine/Source/GPUScenes/: BlinnPhong.cpp
Modules/Engine/Source/Render/: BRDFLUTMap.cpp  DefaultMaps.cpp  FrameGraph.cpp  IrradianceMap.cpp  Light.cpp  Material.cpp  Model.cpp  PrefilterMap.cpp  Skybox.cpp  SkyboxMap.cpp
Modules/Engine/Source/RenderModule/: BPR.cpp  PBR.cpp
Modules/Engine/Source/RenderModule/PBR/: Light.cpp  Material.cpp  Skybox.cpp  Static.cpp
Modules/Engine/Source/Vulkan/: Buffer.cpp  Command.cpp  Context.cpp  Descriptor.cpp  Image.cpp  Memory.cpp  Pipeline.cpp  Queue.cpp  RenderPass.cpp  Sampler.cpp  Shader.cpp  Synchronization.cpp
Modules/Engine/Source/Window/: Enums.cpp  Events.cpp
(+3 files in other folders)
